--- a/gcc-4.8
+++ b/gcc-4.8
@@ -7,7 +7,7 @@ CONFIGURE_FLAGS=" \
   CC=gcc-4.8 \
   CXX=g++-4.8 \
   F77=gfortran-4.8 \
-  CXXFLAGS='-DDEBUG -Og -g3 -ggdb -std=c++0x -fPIC -ftemplate-backtrace-limit=0 -Wextra -Wall -Wunused-variable -Wparentheses -pedantic -Wredundant-decls -Wshadow -Wundef -Wnon-virtual-dtor -Wno-tautological-compare -Wfloat-equal -Wswitch-enum -Wunreachable-code ' \
+  CXXFLAGS='-DTHIS_IS_A_BUILDBOT_BUILD=1 -DDEBUG -Og -g3 -ggdb -std=c++0x -fPIC -ftemplate-backtrace-limit=0 -Wextra -Wall -Wunused-variable -Wparentheses -pedantic -Wredundant-decls -Wshadow -Wundef -Wnon-virtual-dtor -Wno-tautological-compare -Wfloat-equal -Wswitch-enum -Wunreachable-code ' \
   INKSCAPE=no \
   --enable-experimental-grid-extensions \
   --disable-documentation \
